objects/Account.object
<CustomObject>
    <fields>
        <fullName>Existing_field__c</fullName>
        <label>Existing field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JR_Simplot_Test__c</fullName>
        <label>JR Simplot Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>